--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(${PROJECT_NAME}.test
   AllTests.cpp
   fixtureExampleTest.cpp
+  valueParameterizationTest.cpp
   ${PROJECT_NAME}Test.cpp)
 target_link_libraries(${PROJECT_NAME}.test
   ${PROJECT_NAME} gtest pthread)
